// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppBar element produces output with children 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-ptdwpq-MuiPaper-root-MuiAppBar-root"
  id="app.bar1"
  style={
    {
      "--Paper-shadow": "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    }
  }
>
  <div
    className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-s3ewxw-MuiToolbar-root"
  >
    <div
      className="MuiStack-root css-zqp9gt-MuiStack-root"
    >
      <div
        className="MuiStack-root css-bfp4wl-MuiStack-root"
      >
        <div
          className="MuiTypography-root MuiTypography-body1 css-mtp603-MuiTypography-root"
          id="app.bar1.text1"
          style={{}}
        >
          First text
        </div>
        <div
          className="MuiTypography-root MuiTypography-body1 css-mtp603-MuiTypography-root"
          id="app.bar1.text2"
          style={{}}
        >
          Second text
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`AppBar element produces output with children and title 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-1fjjtag-MuiPaper-root-MuiAppBar-root"
  id="app.bar1"
  style={
    {
      "--Paper-shadow": "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    }
  }
>
  <div
    className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-s3ewxw-MuiToolbar-root"
  >
    <div
      className="MuiStack-root css-zqp9gt-MuiStack-root"
    >
      <div
        className="MuiTypography-root MuiTypography-h6 css-lbrw2m-MuiTypography-root"
        style={{}}
      >
        My App
      </div>
      <div
        className="MuiStack-root css-bfp4wl-MuiStack-root"
      >
        <div
          className="MuiTypography-root MuiTypography-body1 css-mtp603-MuiTypography-root"
          id="app.bar1.text1"
          style={{}}
        >
          First text
        </div>
        <div
          className="MuiTypography-root MuiTypography-body1 css-mtp603-MuiTypography-root"
          id="app.bar1.text2"
          style={{}}
        >
          Second text
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`AppBar element produces output with title 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-1fjjtag-MuiPaper-root-MuiAppBar-root"
  id="app.bar1"
  style={
    {
      "--Paper-shadow": "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    }
  }
>
  <div
    className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-s3ewxw-MuiToolbar-root"
  >
    <div
      className="MuiStack-root css-zqp9gt-MuiStack-root"
    >
      <div
        className="MuiTypography-root MuiTypography-h6 css-lbrw2m-MuiTypography-root"
        style={{}}
      >
        My App
      </div>
      <div
        className="MuiStack-root css-bfp4wl-MuiStack-root"
      />
    </div>
  </div>
</header>
`;
